small element overflow fix.

--- a/WebRoot/css/sytles.css
+++ b/WebRoot/css/sytles.css
@@ -548,6 +548,7 @@ body {
     left: 0px;
     width: 100%;
     height: calc(100% - 85px);
+    overflow: hidden;
     overflow-y: auto;
     padding: 5px;
 }
